wave3_composer_dag_trigger.tf

data "google_project" "project" {
}

resource "google_project_service" "composer" {
  project = data.google_project.project.project_id
  service = "composer.googleapis.com"

  timeouts {
    create = "30m"
    update = "40m"
  }

  disable_dependent_services = true
  disable_on_destroy         = false
}

resource "google_project_service" "cloud_function" {
  project = data.google_project.project.project_id
  service = "cloudfunctions.googleapis.com"

  timeouts {
    create = "30m"
    update = "40m"
  }

  disable_dependent_services = true
  disable_on_destroy         = false
}
###############################
#                             #
# Create Composer environment #
#                             #
###############################
resource "google_composer_environment" "new_composer_env" {
  name    = "composer-environment"
  region  = "us-central1"
  project = data.google_project.project.project_id
  config {

    software_config {
      image_version = "composer-2-airflow-2"
    }
    workloads_config {
      scheduler {
        cpu        = 0.5
        memory_gb  = 1.875
        storage_gb = 1
        count      = 1
      }
      web_server {
        cpu        = 0.5
        memory_gb  = 1.875
        storage_gb = 1
      }
      worker {
        cpu        = 0.5
        memory_gb  = 1.875
        storage_gb = 1
        min_count  = 1
        max_count  = 3
      }


    }
    environment_size = "ENVIRONMENT_SIZE_SMALL"

    node_config {
      network         = google_compute_network.composer_network.id
      subnetwork      = google_compute_subnetwork.composer_subnetwork.id
      service_account = google_service_account.composer_env_sa.email
    }
  }
}



################################
#                              #
# Creates Networking resources #
#                              #
################################
resource "google_compute_network" "composer_network" {
  project                 = data.google_project.project.project_id
  name                    = "composer-test-network"
  auto_create_subnetworks = false
}

resource "google_compute_subnetwork" "composer_subnetwork" {
  project       = data.google_project.project.project_id
  name          = "composer-test-subnet"
  ip_cidr_range = "10.2.0.0/16"
  region        = "us-central1"
  network       = google_compute_network.composer_network.id
}

#########################
#                       #
# Creates IAM resources #
#                       #
#########################
# Comment this section to use an existing service account
resource "google_service_account" "composer_env_sa" {
  project      = data.google_project.project.project_id
  account_id   = "composer-worker-sa"
  display_name = "Test Service Account for Composer Environment deployment "
}

resource "google_project_service_identity" "composer_sa" {
  provider = google-beta
  project  = data.google_project.project.project_id
  service  = "composer.googleapis.com"
}

resource "google_project_iam_member" "composer_worker" {
  project = data.google_project.project.project_id
  role    = "roles/composer.worker"
  member  = "serviceAccount:${google_service_account.composer_env_sa.email}"
}

resource "google_service_account_iam_member" "custom_service_account" {
  provider           = google-beta
  service_account_id = google_service_account.composer_env_sa.id
  role               = "roles/composer.ServiceAgentV2Ext"
  member             = "serviceAccount:${google_project_service_identity.composer_sa.email}"
}

########################
#                      #
# Creates PubSub topic #
#                      #
########################
resource "google_pubsub_topic" "trigger" {
  project                    = data.google_project.project.project_id
  name                       = "dag-topic-trigger"
  message_retention_duration = "86600s"
}

##########################
#                        #
# Creates Cloud Function #
#                        #
##########################
resource "google_cloudfunctions_function" "pubsub_function" {
  project = data.google_project.project.project_id
  name    = "pubsub-publisher"
  runtime = "python310"
  region  = "us-central1"

  available_memory_mb   = 128
  source_archive_bucket = google_storage_bucket.cloud_function_bucket.name
  source_archive_object = google_storage_bucket_object.cloud_function_source.output_name
  timeout               = 60
  entry_point           = "pubsub_publisher"
  service_account_email = "${data.google_project.project.number}-compute@developer.gserviceaccount.com"
  trigger_http          = true

}

##################################
#                                #
# Create Cloud Storage resources #
#                                #
##################################

resource "google_storage_bucket" "cloud_function_bucket" {
  project                     = data.google_project.project.project_id
  name                        = "${data.google_project.project.project_id}-cloud-function-source-code"
  location                    = "US"
  force_destroy               = true
  uniform_bucket_level_access = true
}

resource "google_storage_bucket_object" "cloud_function_source" {
  name   = "pubsub-function-zip-file"
  bucket = google_storage_bucket.cloud_function_bucket.name
  # Uncomment to upload a zip containing the cloudfunction source code in zip format
  #source = "/path/to/cloudfunction/source.zip"
  content = "Data as string to be uploaded"
}

###################
#                 #
# Upload Dag file #
#                 #
###################

resource "google_storage_bucket_object" "composer_dags_source" {
  name   = "dags/dag-pubsub-sensor-py-file"
  bucket = trimprefix(trimsuffix(google_composer_environment.new_composer_env.config[0].dag_gcs_prefix, "/dags"), "gs://")
  source = "./pubsub_trigger_response_dag.py"
}
# [END triggering_dags_with_functions_and_pubsub]
